Updated README with installation instructions for Composer

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 			"OCLC" : "src"
 		}
 	},
-	"name" : "oclc/auth",
+	"name" : "OCLC/Auth",
 	"version": "1.0",
 	"license" : "Apache-2.0",
 	"require" : {
