--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
 		"guzzle/guzzle" : ">=3.7.0,<3.9.0"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "~3"
+		"phpunit/phpunit" : "~3",
+		"php-vcr/php-vcr" : "dev-master",
+        "php-vcr/phpunit-testlistener-vcr" : "*"
 	},
 	"description" : "Authentication and Authorization Library for OCLC Web Services",
 	"type" : "library",
