--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 	"require-dev" : {
 		"phpunit/phpunit" : "~3",
 		"php-vcr/php-vcr" : "dev-master",
-        "php-vcr/phpunit-testlistener-vcr" : "*"
+        "php-vcr/phpunit-testlistener-vcr" : "*",
+        "zendframework/zend-log": "2.0.*"
 	},
 	"description" : "Authentication and Authorization Library for OCLC Web Services",
 	"type" : "library",
