--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,13 @@
 	"require-dev" : {
 		"phpunit/phpunit" : "~3",
 		"php-vcr/php-vcr" : "dev-master",
-        "php-vcr/phpunit-testlistener-vcr" : "*",
-        "zendframework/zend-log": "2.0.*"
+		"php-vcr/phpunit-testlistener-vcr" : "*",
+		"zendframework/zend-log" : "2.0.*",
+		"phpdocumentor/phpdocumentor": "2.*"
 	},
+	"config": {
+        "bin-dir": "vendor/bin"
+    },
 	"description" : "Authentication and Authorization Library for OCLC Web Services",
 	"type" : "library",
 	"keywords" : [
