Added composer install to travis.yml build file

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ php:
 # aliased to a recent 5.6.x version
 - 5.6
 
+install:
+    - composer install
+
 # omitting "script:" will default to phpunit
 script: phpunit --configuration phpunit.xml --coverage-text
 
