--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
 		"ext-curl" : "*",
 		"ext-json" : "*",
 		"ext-openssl" : "*",
-		"guzzle/guzzle" : ">=3.7.0,<3.9.0"
+		"guzzlehttp/guzzle" : ">=6.0"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "~3",
 		"php-vcr/php-vcr" : "dev-master",
 		"php-vcr/phpunit-testlistener-vcr" : "*",
-		"zendframework/zend-log" : "2.0.*",
+		"zendframework/zend-log" : "2.*",
 		"phpdocumentor/phpdocumentor" : "2.*"
 	},
 	"config" : {
