--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,10 @@ language: php
 # list any PHP version you want to test against
 php:
 # using major version aliases
-# aliased to 5.3.29
-- 5.3
-# aliased to a recent 5.4.x version
-- 5.4
-# aliased to a recent 5.5.x version
-- 5.5
 # aliased to a recent 5.6.x version
 - 5.6
+#alias to a recent 7.0.x version
+- 7.0
 
 install:
     - composer install
