--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 		}
 	},
 	"name" : "OCLC/Auth",
-	"version" : "2.0",
+	"version" : "3.0",
 	"license" : "Apache-2.0",
 	"require" : {
 		"php" : ">=5.3.3",
@@ -17,8 +17,8 @@
 		"guzzlehttp/guzzle" : ">=6.0"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "~3",
-		"php-vcr/php-vcr" : "dev-master",
+		"phpunit/phpunit" : ">=3",
+		"php-vcr/php-vcr" : "1.3.1",
 		"php-vcr/phpunit-testlistener-vcr" : "*",
 		"zendframework/zend-log" : "2.*",
 		"phpdocumentor/phpdocumentor" : "2.*"
