--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"guzzlehttp/guzzle" : ">=6.0"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : ">=3",
+		"phpunit/phpunit" : "^5",
 		"php-vcr/php-vcr" : "1.3.1",
 		"php-vcr/phpunit-testlistener-vcr" : "*",
 		"zendframework/zend-log" : "2.*",
