--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"ext-curl" : "*",
 		"ext-json" : "*",
 		"ext-openssl" : "*",
-		"guzzlehttp/guzzle" : ">=6.0"
+		"guzzlehttp/guzzle" : "^6"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "^5",
