--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
     - composer install
 
 # omitting "script:" will default to phpunit
-script: vendor/bin/phpunit --configuration phpunit.xml --coverage-text
+script: vendor/bin/phpunit --configuration phpunit.xml --coverage-clover=coverage.xml
 
 after_success: 
     - bash <(curl -s https://codecov.io/bash)  
