--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
 		}
 	},
 	"name" : "OCLC/Auth",
-	"version" : "4.1",
+	"version" : "4.2",
 	"license" : "Apache-2.0",
 	"require" : {
-		"php" : ">=5.6",
+		"php" : ">=7.0",
 		"lib-curl" : "*",
 		"lib-openssl" : "*",
 		"ext-curl" : "*",
@@ -21,7 +21,11 @@
 		"php-vcr/php-vcr" : "1.3.1",
 		"php-vcr/phpunit-testlistener-vcr" : "*",
 		"zendframework/zend-log" : "2.*",
-		"phpdocumentor/phpdocumentor" : "2.*"
+		"phpdocumentor/phpdocumentor" : "2.*",
+		"squizlabs/php_codesniffer" : "2.*",
+		"phploc/phploc" : "3.*",
+		"phpmd/phpmd" : "2.*",
+		"sebastian/phpcpd" : "2.0.4"
 	},
 	"config" : {
 		"bin-dir" : "vendor/bin"
